# govtech-csg-xcg-securefileupload

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: release-new-version.yaml  run-ci-tests.yaml
src/govtech_csg_xcg/securefileupload/: File.py  __init__.py  decorator.py  middleware.py  utils.py  validators.py
src/govtech_csg_xcg/securefileupload/conf/: settings.py
src/govtech_csg_xcg/securefileupload/data/: whitelists.py
src/govtech_csg_xcg/securefileupload/modules/: converter.py  evaluator.py  helper.py
src/govtech_csg_xcg/securefileupload/modules/sanitization/: basic.py  pdf.py  sanitizer.py
src/govtech_csg_xcg/securefileupload/modules/validation/: antivirus.py  basic.py  image.py  quicksand.py  validator.py
tests/: manage.py  run_all_tests.sh
tests/testapp/: forms.py  tests.py  urls.py  views.py
tests/testapp/templates/: test_form.html
tests/testapp/test_files/: control.txt  long_file_name_cxuUUGz166w44LA0neLP3QtYQeF5tgeJuawFCSJYNNAIVxp3mjnoZOFuLibg4u5R.txt  pdf_file_with_extension_changed.txt  yara_test.txt
tests/testapp/yara_rules/: test.yar
tests/testproject/: urls.py
tests/testproject/settings/: base.py  default.py  keep_filename.py  use_clamav.py  use_yara.py
